--- a/src/assets/common.sass
+++ b/src/assets/common.sass
@@ -13,6 +13,8 @@ p
   font-weight: 400
   letter-spacing: 1.5px
   margin-bottom: 0
+  @media screen and (max-width:575px)
+    font-size: 14px
 
 .centerBox
   width: 80%
