--- a/src/assets/common.sass
+++ b/src/assets/common.sass
@@ -8,6 +8,7 @@ h6,h5,h4
   font-family: 'Noto Sans TC',sans-serif
   font-weight: 500
   letter-spacing: 3px
+  margin-bottom: 0
 p
   font-family: 'Noto Sans TC',sans-serif
   font-weight: 400
@@ -79,3 +80,42 @@ p
   background-color: #d98841
   border-radius: 10px
   border: 2px solid #ffffff
+
+// 返回
+.backStep
+    display: flex
+    text-decoration: none
+    position: relative
+    padding-bottom: 11px
+    justify-content: center
+    align-items: center
+    overflow: hidden
+    padding: 10px
+    height: 100%
+    cursor: pointer
+    &::before
+        content: ''
+        display: block
+        background-image: url('/public/assets/images/icon/back.svg')
+        background-size: contain
+        background-repeat: no-repeat
+        background-position: bottom
+        width: 100%
+        height: 16px
+        position: absolute
+        bottom: 0
+.backStep:hover:before
+    animation: slide2 1s ease
+
+@keyframes slide2
+  0% 
+    transform: translateX(0)
+  
+  50% 
+    transform: translateX(-100%)
+  
+  51% 
+    transform: translateX(100%)
+  
+  to 
+    transform: translateX(0)
